# L10n-Audit-Toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO_USE.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  USAGE_AR.md  bootstrap.sh  clean_project-v1.0.4.txt  clean_project.txt  config.json.example  project-context.txt  pyproject.toml  release_readiness_report.md  repomix-output.xml  requirements-optional.txt  requirements.txt  translation_decision_quality_audit.md  tree.txt  walkthrough.md
.github/: PULL_REQUEST_TEMPLATE.md
.l10n-audit/: config.json  glossary.json
ai/: prompts.py  provider.py  verification.py
audits/: __init__.py  ai_review.py  ar_locale_qc.py  ar_semantic_qc.py  en_grammar_audit.py  en_locale_qc.py  icu_message_audit.py  l10n_audit_pro.py  placeholder_audit.py  terminology_audit.py
config/: config.example.json  config.json  project_profiles.json
core/: __init__.py  audit_report_utils.py  audit_runtime.py  cli.py  context_evaluator.py  glossary_engine.py  languagetool_manager.py  profile_detection.py  schema_validation.py  usage_scanner.py  workspace.py
docs/: ADR.md  API.md  ARCHITECTURE.md  BRS.md  CHANGELOG.md  DATABASE.md  FRS.md  NFR.md  PROJECT_DOCUMENTATION.md  SRS.md  UI_UX.md  USE_CASES.md  USE_CASE_DIAGRAM.md  ai_usage.md  audit_modules.md  ci_cd_integration.md  configuration.md  output_reports.md  overview.md  quickstart.md  review_workflow.md  terminology_guide.md
dotenv/: __init__.py
examples/: README.md
fixes/: __init__.py  apply_glossary_fixes.py  apply_review_fixes.py  apply_safe_fixes.py
http_api/: server.py
l10n_audit/: __init__.py  api.py  exceptions.py  models.py
reports/: report_aggregator.py
schemas/: config.schema.json  final_audit_report.schema.json  fix_plan.schema.json
scratch_test/: ar.json
tests/: conftest.py  test_adaptation_intelligence.py  test_adaptive_routing.py  test_ai_factory.py  test_ai_invocation_and_contract.py  test_ai_logic.py  test_ai_optimization.py  test_ai_review_activity_indicator.py  test_ai_review_fixes.py  test_api.py  test_apply_cycle_closure.py  test_apply_final_workflow.py  test_apply_reconciliation.py  test_apply_review_fixes.py  test_apply_side_closure.py  test_ar_locale_qc.py  test_ar_routing_shadow.py  test_ar_semantic_qc.py  test_arabic_enforcement_activation.py  test_arabic_nlp_layer.py  test_artifact_governance.py  test_audit_output_adapter.py  (+114 more)
(+154 files in other folders)
